# prd_agent

./: .acc-abandoned-probe.md  .cursorrules  .dockerignore  .editorconfig  .env.template  .gitattributes  .gitignore  2.srs.md  AGENTS.md  ASSET_REFACTOR_GUIDE.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README.md  SRS-designer.md  TESTING.md  behavior-insights-bento-demo.html  behavior-insights-board-mockup.html  behavior-insights-hub-mockup.html  behavior-insights-journey-mockup.html  behavior-insights-map-mockup.html  behavior-insights-mockup.html  behavior-insights-timemachine-mockup.html  behavior-insights-timepicker-options.html  behavior-insights-trend-mockup.html  behavior-voc-mockup.html  cds-compose.yml  deploy.sh  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.publish.yml  docker-compose.ssl.yml  docker-compose.yml  exec_bt.sh  exec_cds.sh  exec_dep.sh  exec_nginx_setup.sh  execdep.sh  fast.sh  graph-view-prototype.html  (+19 more)
.cds/: state.json
.claude/: launch.json  settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
PrdAgent.Server/: .dockerignore  Dockerfile  PrdAgent.sln
branch-tester/: Dockerfile  bt.config.example.json  exec_branch_tester.sh  package.json  tsconfig.json
cds/: CLAUDE.md  Dockerfile  Dockerfile.dist  Dockerfile.master  PLAN.md  README.md  cds-compose.selfhost.yml  cds-compose.yaml  cds.config.example.json  exec_branch_tester.sh  exec_cds.sh  exec_setup.sh  host-env.example.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
cds-mysql-demo/: README.md  cds-compose.yml  init.sql
changelogs/: .entropy-manifest.yml  2026-03-19_cds-branch-slug-resolution.md  2026-03-19_cds-card-color-marker.md  2026-03-19_defect-fixes.md  2026-03-19_prd-agent-web-preview.md  2026-03-19_tutorial-section.md  2026-03-19_user-list-table-stats.md  2026-03-20_cds-activity-monitor-enhance.md  2026-03-20_cds-activity-ui.md  2026-03-20_cds-auth-skills-optimization.md  2026-03-20_cds-cache-isolation.md  2026-03-20_cds-deploy-pipeline.md  2026-03-20_cds-etag-fix.md  2026-03-20_cds-poll-silence-ai-occupy.md  2026-03-20_fix-cds-502-and-theme-skin.md  2026-03-20_hover-video-playback.md  2026-03-20_lab-stream-url-fix.md  2026-03-20_prd-agent-operations-guide.md  2026-03-20_prd-agent-web-layout-restructure.md  2026-03-20_prd-preview-alignment.md  2026-03-20_skill-workflow-guide.md  2026-03-20_toolbox-chat-ux-fix.md  2026-03-20_toolbox-completeness.md  2026-03-21_cds-sse-heartbeat-branch-id.md  2026-03-21_expand-user-roles.md  2026-03-21_fix-showcase-gallery-detail.md  2026-03-21_generation-snapshot.md  2026-03-21_illustration-prompt-fix.md  2026-03-21_showcase-gallery-fixes.md  2026-03-21_submissions-showcase.md  2026-03-21_toolbox-feedback-sharing-shortcuts.md  2026-03-21_toolbox-regenerate-fix.md  2026-03-21_toolbox-session-management.md  (+2008 more)
prd-desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri-updater.key.pub  tauri.conf.json
prd-desktop/src-tauri/.cargo/: config.toml
prd-desktop/src-tauri/capabilities/: default.json
prd-desktop/src-tauri/src/: lib.rs
prd-desktop/src-tauri/src/commands/: assets.rs  attachment.rs  auth.rs  branding.rs  client_config.rs  config.rs  defect.rs  devtools.rs  document.rs  group.rs  intent.rs  kb.rs  mod.rs  open_platform.rs  prd_comments.rs  preview_ask_history.rs  session.rs  skill.rs  updater.rs
prd-desktop/src-tauri/src/models/: mod.rs
prd-desktop/src-tauri/src/services/: api_client.rs
(+5666 files in other folders)
