[package]
name = "prd-agent-desktop"
version = "1.0.0"
description = "PRD Agent Desktop Client"
authors = ["PRD Agent Team"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "prd_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-fs = "2.0"
tauri-plugin-clipboard-manager = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
thiserror = "2.0"
lazy_static = "1.5"
uuid = { version = "1.11", features = ["v4", "serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

